# tikal-modern-data-eng-2024-spark-lecture

./: .gitignore  README.md  diagrams.excalidraw  pyproject.toml
data/sources/: cars_bad_schema.json  transactions.json
tests/: conftest.py  models.py  test_batch.py  test_rdd.py  test_setup.py  test_streaming.py
tests/cdc.json/: .part-00000-0aeb6940-3672-4d93-aeff-678bf8fa4770-c000.json.crc  part-00000-0aeb6940-3672-4d93-aeff-678bf8fa4770-c000.json
tikal_modern_data_eng_2024_spark_lecture/: batch.py  open_table_formats.py  streaming.py
